--- a/WeatherApp/WeatherApp/Views/Designs/Base.lproj/Main.storyboard
+++ b/WeatherApp/WeatherApp/Views/Designs/Base.lproj/Main.storyboard
@@ -16,32 +16,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Search Location" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z9e-L7-Fhg">
-                                <rect key="frame" x="10" y="44" width="394" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <searchBar contentMode="redraw" placeholder="Search Location" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z9e-L7-Fhg">
+                                <rect key="frame" x="10" y="44" width="394" height="51"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="ncq-2F-LGG"/>
                                 </connections>
                             </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="s6C-fX-F9D">
-                                <rect key="frame" x="0.0" y="141" width="414" height="721"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="s6C-fX-F9D">
+                                <rect key="frame" x="0.0" y="150" width="414" height="712"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="ZAE-WL-Il2"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="hes-lS-voT"/>
                                 </connections>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dPO-jA-A82">
-                                <rect key="frame" x="20" y="101" width="374" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dPO-jA-A82">
+                                <rect key="frame" x="20" y="101" width="374" height="41"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="41" id="zcm-Wm-68S"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="34"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dPO-jA-A82" secondAttribute="trailing" constant="20" id="0J3-Y0-0gD"/>
+                            <constraint firstItem="Z9e-L7-Fhg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="2Pt-y6-gQz"/>
+                            <constraint firstItem="s6C-fX-F9D" firstAttribute="top" secondItem="dPO-jA-A82" secondAttribute="bottom" constant="8" symbolic="YES" id="77A-jZ-gmx"/>
+                            <constraint firstItem="s6C-fX-F9D" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="EBo-jq-P7D"/>
+                            <constraint firstItem="Z9e-L7-Fhg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="WNn-9p-N4f"/>
+                            <constraint firstItem="dPO-jA-A82" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="cwP-bg-3wR"/>
+                            <constraint firstItem="dPO-jA-A82" firstAttribute="top" secondItem="Z9e-L7-Fhg" secondAttribute="bottom" constant="6" id="fG9-bi-2MD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Z9e-L7-Fhg" secondAttribute="trailing" constant="10" id="ha8-dL-dFv"/>
+                            <constraint firstItem="s6C-fX-F9D" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="oI6-us-0tB"/>
+                            <constraint firstItem="s6C-fX-F9D" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="pq9-Sq-W4a"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="cityLabel" destination="dPO-jA-A82" id="bfq-L8-GeM"/>
